Make output used for chatter and restore CLI compat